force-app/main/default/objects/OCX_CX_Concept__c/OCX_CX_Concept__c.object-meta.xml
<CustomObject>
    <description>Reusable CX measurement concept beneath a theme.</description>
    <label>CX Measurement Concept</label>
    <nameField>
        <label>Concept Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CX Measurement Concepts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>