force-app/main/default/objects/OCX_CX_Concept__c/fields/Concept_Key__c.field-meta.xml
<CustomField>
    <fullName>Concept_Key__c</fullName>
    <externalId>true</externalId>
    <label>Concept Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>