force-app/main/default/objects/OCX_CX_Concept__c/fields/Default_Archetypes__c.field-meta.xml
<CustomField>
    <fullName>Default_Archetypes__c</fullName>
    <label>Default Metric Archetypes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>