force-app/main/default/objects/OCX_CX_Concept__c/fields/Signal_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Signal_Patterns__c</fullName>
    <label>Signal Patterns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>