force-app/main/default/objects/OCX_CX_Concept__c/fields/Theme_Key__c.field-meta.xml
<CustomField>
    <fullName>Theme_Key__c</fullName>
    <label>Theme Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>